--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Bebas Neue', cursive;
 }
 
 /*font-family: 'Bebas Neue', cursive;
-font-family: 'Work Sans', sans-serif;*/
+font-family: 'Work Sans', sans-serif;
+font-family: 'Ms Madi', cursive;*/
 
 .main-header{
-    background-color: black;
+    font-family: 'Bebas Neue', cursive;
+    background-color: white;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -19,6 +20,7 @@ font-family: 'Work Sans', sans-serif;*/
 .main-header ul{
     display: flex;
     gap: 24px;
+    list-style: none;
 }
 
 .main-header ul a {
@@ -34,12 +36,13 @@ font-family: 'Work Sans', sans-serif;*/
 
 .banner img {
     width: 100%;
-    filter: opacity(50%);
 }
 
 .text-banner{
-    background-color: rgba(255, 255, 255, 0.4);
-    text-align: center;
+    font-size: 30px;
+    font-family: 'Ms Madi', cursive;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
     height: 100%;
     display: flex;
     justify-content: center;
