--- a/css/style.css
+++ b/css/style.css
@@ -31,21 +31,35 @@ font-family: 'Ms Madi', cursive;*/
 
 .banner{
     background-image: url(../img/taylor-swift.jpg);
-    height: 800px;
-}
-
-.banner img {
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .text-banner{
     font-size: 30px;
     font-family: 'Ms Madi', cursive;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.8);
     color: white;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+h2{
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    font-size: 50px;
+}
+
+.main-section{
+    border-radius: 12px;
+    font-family: 'Bebas Neue', cursive;
+    display: flex;
+    gap: 30px;
+}
+
+.main-section img{
+    border-radius: 12px;
 }
