--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,13 @@ h2{
     overflow: hidden;
 }
 
+.card img{
+    position: fixed;
+}
+
 .info{
+    position: relative;
+    z-index: 6;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -99,6 +105,12 @@ footer{
     font-family: 'Bebas Neue', cursive;
     padding: 80px;
     background-color: #171717;
+}
+
+.contato{
+    display: flex;
+    padding: 12px;
+    gap: 16px;
 }
 
 .final-msg{
