--- a/css/style.css
+++ b/css/style.css
@@ -74,19 +74,17 @@ h2{
 }
 
 .card{
-    display: flex;
-    flex-direction: column;
+    display: flex; 
+    flex-wrap: wrap;
     border-radius: 12px;
     overflow: hidden;
 }
 
-.card img{
-    position: fixed;
+.card img {
+    width: 100%;
 }
 
 .info{
-    position: relative;
-    z-index: 6;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
